k8s/manifests/api.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mi-despliegue
  namespace: default
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mi-app
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 25%
  template:
    metadata:
      labels:
        app: mi-app
        version: v1
    spec:
      containers:
        - name: mi-contenedor
          image: ghcr.io/jarvisbot01/security:latest
          ports:
            - containerPort: 8080
      imagePullSecrets:
        - name: ghcr-secret
---
apiVersion: v1
kind: Service
metadata:
  name: mi-servicio
  namespace: default
spec:
  selector:
    app: mi-app
  ports:
    - protocol: TCP
      port: 8443
      targetPort: 8080
      nodePort: 30007
  type: NodePort
---
apiVersion: networking.istio.io/v1beta1
kind: DestinationRule
metadata:
  name: mi-servicio-destination
  namespace: default
spec:
  host: mi-servicio.default.svc.cluster.local
  subsets:
    - name: v1
      labels:
        version: v1
  trafficPolicy:
    loadBalancer:
      simple: ROUND_ROBIN
---
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: my-virtualservice
  namespace: default
spec:
  hosts:
    - "api.josedaniel.live"
  gateways:
    - istio-system/internal-gateway
  http:
    - match:
        - uri:
            prefix: /
          port: 443
      route:
        - destination:
            host: mi-servicio.default.svc.cluster.local
            subset: v1
            port:
              number: 8443
---
