k8s/manifests/josedaniel.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mi-nginx
  namespace: default
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mi-nginx-app
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 25%
  template:
    metadata:
      labels:
        app: mi-nginx-app
        version: v1
    spec:
      containers:
        - name: mi-contenedor-nginx
          image: nginx:mainline-bookworm-perl
          imagePullPolicy: Always
          ports:
            - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: mi-servicio-nginx
  namespace: default
spec:
  selector:
    app: mi-nginx-app
  ports:
    - protocol: TCP
      port: 443
      targetPort: 80
      nodePort: 30443
  type: NodePort
---
apiVersion: networking.istio.io/v1beta1
kind: DestinationRule
metadata:
  name: mi-servicio-destination-nginx
  namespace: default
spec:
  host: mi-servicio-nginx.default.svc.cluster.local
  subsets:
    - name: v1
      labels:
        version: v1
  trafficPolicy:
    loadBalancer:
      simple: ROUND_ROBIN
---
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: my-virtualservice-nginx
  namespace: default
spec:
  hosts:
    - "josedaniel.live"
  gateways:
    - istio-system/internal-gateway
  http:
    - match:
        - uri:
            prefix: /
          port: 443
      route:
        - destination:
            host: mi-servicio-nginx.default.svc.cluster.local
            subset: v1
            port:
              number: 443
---
